--- a/agb.html
+++ b/agb.html
@@ -58,31 +58,76 @@
         <div class="col-lg-12">
                 <div class="hpanel blog-article-box">
                     <div class="panel-heading">
-                        <h4>AGB </h4>
-                        <small>There are many variations of passages of Lorem Ipsum available</small>
-                        <div class="text-muted small">
-                            Created by: <span class="font-bold">Mike Smith</span>
-                            21.03.2015, 06:45 pm
-                        </div>
+                        <h4>AGB</h4>
                     </div>
                     <div class="panel-body">
+                        <h3>I VERTRAGSPARTNER</h3>
                         <p>
-                            Maecenas placerat facilisis interdum. Mauris eu dolor nisi. Suspendisse ullamcorper purus nec nibh maximus, ut sollicitudin enim venenatis.
-                            Nullam interdum, odio sit amet dapibus mollis, ligula diam pretium sapien, eget suscipit felis ipsum sed lorem. <br>
-                            <br> Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ultrices aliquam nisi, vel semper augue auctor eu. Pellentesque a
-                            sollicitudin tellus. Aenean posuere pharetra ipsum, ornare pretium lorem convallis non. Vivamus ac sodales sem. Nunc congue dolor ut dui maximus, imperdiet sollicitudin
-                            velit auctor. Integer tincidunt iaculis vehicula. Nunc faucibus orci non imperdiet ultricies. Nunc pellentesque dui nisi, vel convallis quam malesuada ornare. Nunc ac purus
-                            velit. Cras aliquet porta sodales. Proin blandit ornare bibendum.
+                          Die nachfolgenden allgemeinen Geschäftsbedingungen der PAYUCA GmbH, FN 440762f, (in der Folge: PAYUCA) gelten für jene natürlichen oder juristischen Personen, die sich über die PAYUCA-App oder auf https://payuca.com registrieren (in der Folge: Kunden).
                         </p>
-                        <br>
-                        <blockquote class="pull-left" style="max-width: 250px">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </blockquote>
-                        <p>
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-                            some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum...
+
+                        <h3 class="m-t-lg">II BEGRIFFSBESTIMMUNGEN</h3>
+                        <p>II.1.</p>   <p style="margin-left: 30px;">Unter PAYUCA-App versteht man die von PAYUCA betriebene Smartphone-Applikation, durch welche es den Nutzern ermöglicht wird, sich bei PAYUCA zu registrieren, Stellplätze, welche PAYUCA von Stellplatzanbietern anmietet, vorab zu reservieren, mittels GPS ausfindig zu machen, dort mit ihrem Fahrzeug zu parken und für diese Parkmöglichkeit bargeldlos zu bezahlen.</p>
+                        <p>II.2.</p>   <p style="margin-left: 30px;">Die PAYUCA-Homepage ist die unter der URL https://payuca.com aufrufbare Website, auf der der Kunde mehr über PAYUCA erfahren kann und durch die PAYUCA auch nach außen auftritt.</p>
+                        <p>II.3.</p>   <p style="margin-left: 30px;">Unter PAYUCA-NFC-Chip versteht man einen personalisierten Near-Field-Communication-Tag, der dem Kunden auf dessen Wunsch als Alternative zur PAYUCA-App zwecks Betreten und Verlassen einer Parkgarage bzw. eines geschlossenen Parkbereiches von PAYUCA überlassen wird.</p>
+                        <p>II.4.</p>   <p style="margin-left: 30px;">Unter Stellplatz versteht man einen sich auf einem Parkplatz im Freien oder in einer Parkgarage befindlichen KFZ-Abstellplatz, zu dem nicht öffentlich zugefahren werden kann, und der durch Garagentore, Schranken oder Ähnliches vor dem Zufahren durch beliebige Personen gesichert ist, wobei für diesen Stellplatz keine öffentlichen Parkgebühren anfallen.</p>
+                        <p>II.5.</p>   <p style="margin-left: 30px;">Garage bezeichnet eine sich in einem Bauwerk befindliche, durch eine Sperrvorrichtung gesicherte, nicht öffentlich zufahrbare Parkgarage, in der sich von PAYUCA angebotene Stellplätze befinden</p>
+                        <p>II.6.</p>   <p style="margin-left: 30px;">Parkplatz bezeichnet eine sich im Freien befindliche, durch eine Sperrvorrichtung gesicherte, nicht öffentlich zufahrbare Fläche, auf der sich von PAYUCA angebotene Stellplätze befinden.</p>
+                        <p>II.7.</p>   <p style="margin-left: 30px;">Als Stellplatzanbieter im Sinne dieser AGB werden die Eigentümer oder Verfügungsberechtigten der Stellplätze bezeichnet, die der Kunde von PAYUCA anmietet. PAYUCA mietet diese Stellplätze zum Zwecke der Weitervermietung an die Kunden an.</p>
+                        <p>II.8.</p>   <p style="margin-left: 30px;">Sperrvorrichtung bezeichnet ein von PAYUCA an den Garagentoren, Schranken, Zugangstüren und Lifttüren angebrachtes Gerät, das den Zugang zu den jeweiligen Stellplätzen versperrt und das jeweilige Öffnen und Schließen derselben durch die PAYUCA-App bzw. den PAYUCA-NFCChip ermöglicht.</p>
+                        <p>II.9.</p>   <p style="margin-left: 30px;">Die PAYUCA-Hotline ist in der PAYUCA-App oder auf der PAYUCA-Homepage einsehbar.</p>
+                        <p>II.10.</p>   <p style="margin-left: 30px;">Fahrzeug bezeichnet ein ein- oder mehrspuriges Kraftfahrzeug im Sinne des § 2 Abs 1 Z 1 Kraftfahrgesetz 1967, wobei Fahrzeuge, deren Antriebsenergie Oberleitungen entnommen wird und solche, die gas- oder wasserstoffbetrieben sind, nicht mitumfasst sind.</p>
+                        <p>II.11.</p>   <p style="margin-left: 30px;">Unter Gutschein besteht innerhalb der App (iOS/Android) die Möglichkeit, einen PromotionCode einzugeben, um dadurch kostenfrei Guthaben zu erhalten.</p>
+                        <p>II.12.</p>   <p style="margin-left: 30px;">Über die PAYUCA Tell-A-Friend-Funktion besteht die Möglichkeit, den Link zum Download der PAYUCA-App aus den jeweiligen App-Stores (iOS/Android) mit anderen Personen zu teilen.</p>
                         </p>
-                        <br>
+
+                        <h3 class="m-t-lg">III PRÄAMBEL</h3>
+                        <p>III.1.</p>   <p style="margin-left: 30px;">PAYUCA betreibt ein System der Vermietung von Stellplätzen im urbanen Raum. Ziel ist die Errichtung eines möglichst flächendeckenden Netzes potentieller Stellplätze für die Kunden von PAYUCA. Dies erfolgt über den PAYUCA-NFC-Chip oder die PAYUCA-App, die mittels GPS freie Stellplätze finden soll. PAYUCA mietet hierfür Stellplätze an, um diese an ihre Kunden weiterzuvermieten.</p>
+                        <p>III.2.</p>   <p style="margin-left: 30px;">Der Kunde begleicht seine Parkgebühren in Form eines (Unter-)Mietzinses direkt an PAYUCA.</p>
+                        <p>III.3.</p>   <p style="margin-left: 30px;">Ein Vertragsverhältnis sowie direkte Ansprüche zwischen dem Kunden und dem Stellplatzanbieter entstehen nicht</p>
+
+
+                        <h3 class="m-t-lg">IV VERTRAGSBEGINN UND -BEENDIGUNG</h3>
+                        <p>IV.1.</p>   <p style="margin-left: 30px;">Ein Vertrag im Sinne dieser allgemeinen Geschäftsbedingungen zwischen PAYUCA und dem Kunden entsteht in jenem Zeitpunkt, in dem sich der Kunde in der PAYUCA App (Punkt V.) unter Zustimmung zu diesen allgemeinen Geschäftsbedingungen registriert.</p>
+                        <p>IV.1.1.</p>   <p style="margin-left: 30px;">Für die Registrierung muss der Kunde zumindest folgende Daten bekanntgeben:
+                                         <ul>
+                                           <li>E-Mail-Adresse</li>
+                                           <li>Telefonnummer</li>
+                                           <li>Selbst gewähltes Passwort</li>
+                                         </ul>
+                                       </p>
+                        <p>IV.1.2.</p>   <p style="margin-left: 30px;">Um die volle Funktionalität nutzen zu können, muss der Kunde zusätzlich folgende Daten bekanntgeben:
+                                         <ul>
+                                           <li>Vor- und Nachname;</li>
+                                           <li>Adresse (Straße, Hausnummer, Stiege und Türnummer, PLZ und Ort);</li>
+                                           <li>Amtliche(s) KFZ-Kennzeichen des/der auf den Kunden gemeldeten Fahrzeuge(s) und jenes/r Fahrzeuge(s), die/das in regelmäßigem Gebrauch durch den Kunden stehen/steht, bevor der Kunde mit dem jeweiligen Fahrzeug eine Parkmöglichkeit von PAYUCA nutzt.</li>
+                                         </ul>
+                                       </p>
+                        <p>IV.1.3.</p>   <p style="margin-left: 30px;">Der Kunde wählt bei Registrierung ein Passwort, das aus zumindest 8 Zeichen, davon zumindest ein Großbuchstabe, eine Ziffer und ein Sonderzeichen, bestehen muss. Er ist verpflichtet, dieses Passwort geheim zu halten, es nicht an Dritte weiterzugeben und vor dem Zugriff Dritter zu schützen.</p>
+                        <p>IV.1.4.</p>   <p style="margin-left: 30px;">Zur Überprüfung der nach Punkt IV.1.1 bekannt gegebenen Telefonnummer wird dem Kunden eine TAN oder ein Link an diese Telefonnummer geschickt. Der Kunde gibt diese in der Eingabemaske ein, oder klickt auf den Link, wodurch die Telefonnummer verifiziert wird.</p>
+                        <p>IV.1.5.</p>   <p style="margin-left: 30px;">Durch die vollständige Registrierung erhält der Kunde Zugang zu den Funktionen der PAYUCA App und kann diese benutzen, um Stellplätze ausfindig zu machen und – sofern sein Guthaben auf seinem elektronischen Benutzerkonto im Sinne des Punkt VI. ausreicht – auch zu reservieren und anzumieten.</p>
+                        <p>IV.1.5.</p>   <p style="margin-left: 30px;">Der Kunde ist verpflichtet, die gemäß Punkt IV.1. bekanntgegebenen Daten entsprechend zu aktualisieren, wenn sie sich verändern. Auf Aufforderung durch PAYUCA ist er verpflichtet, sein Passwort zu ändern, wobei dies maximal einmal pro Kalenderquartal oder im Falle des Verdachts eines unrechtmäßigen Zugriffs Dritter jederzeit erfolgt.</p>
+                        <p>IV.2.</p>   <p style="margin-left: 30px;">Der durch die Registrierung abgeschlossene Vertrag wird auf unbestimmte Zeit abgeschlossen.</p>
+                        <p>IV.3.</p>   <p style="margin-left: 30px;">Es besteht kein Anspruch potentieller Kunden auf Registrierung und/oder Vertragsabschluss. PAYUCA kann ohne Angabe von Gründen von einem Vertragsabschluss Abstand nehmen.</p>
+                        <p>IV.4.</p>   <p style="margin-left: 30px;">Kündigung:</p>
+                        <p>IV.4.1.</p>   <p style="margin-left: 30px;">Der Kunde kann den durch die Registrierung abgeschlossenen Vertrag jederzeit mit sofortiger Wirkung kündigen. Die Kündigung hat schriftlich zu erfolgen, wobei der Zugang eines entsprechenden E-Mails bei PAYUCA genügt.</p>
+                        <p>IV.4.2.</p>   <p style="margin-left: 30px;">PAYUCA kann den Vertrag jederzeit mit sofortiger Wirkung kündigen. Die Kündigung hat schriftlich zu erfolgen, wobei der Zugang eines entsprechenden E-Mails an die vom Kunden bei Registrierung bzw. anschließend gemäß Punkt IV.1. bekannt gegebene E-Mail-Adresse genügt.</p>
+
+                        <h3 class="m-t-lg">V PAYUCA-APP UND PAYUCA-NFC-CHIP</h3>
+                        <p>V.1.</p>   <p style="margin-left: 30px;">Die PAYUCA-App fungiert als Schnittstelle zwischen dem Kunden und PAYUCA einerseits, sowie zwischen PAYUCA und den Stellplatzanbietern andererseits, um die Reservierung und Anmietung von Stellplätzen durch die Kunden zu ermöglichen.</p>
+                        <p>V.2.</p>   <p style="margin-left: 30px;">Die PAYUCA-App leitet den Zielstandort eines durch Betätigen des entsprechenden Buttons am Display des Smartphones ausgewählten Stellplatzes an Google-Maps bzw. Apple-Karten weiter, sofern diese Applikationen am Smartphone des Kunden installiert sind. Die Navigation zu dem Stellplatz erfolgt über diese Applikationen.</p>
+                        <p>V.3.</p>   <p style="margin-left: 30px;">Nach der ersten Aufladung seines Benutzerkontos (Punkt VI.5.) besteht für den Kunden die – vonseiten PAYUCA jederzeit widerrufbare oder einschränkbare – Möglichkeit, gegen eine einmalige Gebühr einen PAYUCA-NFC-Chip zu erhalten.</p>
+                        <p>V.3.1.</p>   <p style="margin-left: 30px;">Die aktuelle Höhe der Gebühr nach Punkt V.3. ist dem Tarifblatt auf der PAYUCA-Homepage oder der PAYUCA-App zu entnehmen. PAYUCA ist berechtigt, auf die Einhebung dieser Gebühr zu verzichten, wobei der Kunde keinen Rechtsanspruch auf einen solchen Verzicht hat.</p>
+                        <p>V.3.2.</p>   <p style="margin-left: 30px;">Der Kunde verpflichtet sich, den PAYUCA-NFC-Chip sicher zu verwahren und deren Verlust oder Diebstahl umgehend PAYUCA über die PAYUCA-Hotline mitzuteilen (Punkt XVIII.), damit eine Sperrung des NFC-Chip veranlasst werden kann. Die Sperrung des NFC-Chip bei Verlust oder Diebstahl ist kostenlos. Für gewünschten Ersatz des PAYUCA-NFC-Chips hat der Kunde eine Gebühr entsprechend Tarifblatt (Punkt V.3.1.) zu bezahlen.</p>
+                        <p>V.4.</p>   <p style="margin-left: 30px;">Die PAYUCA-App und der PAYUCA-NFC-Chip dienen jeweils als Schlüssel, mit denen die Sperrvorrichtungen zu Stellplätzen geöffnet werden können:</p>
+                        <p>V.4.1.</p>   <p style="margin-left: 30px;">Bei Benutzung der PAYUCA-App geschieht dies durch Betätigen eines entsprechenden Buttons am Display des Smartphones, sobald eine Bluetooth-Verbindung zwischen dem Smartphone des Kunden und der Sperrvorrichtung des Garagentores oder Schrankens eines Stellplatzes hergestellt werden kann. Auch Zugangstüren oder Lifttüren können während laufenden Parkvorganges über die PAYUCA-App geöffnet werden, sobald eine Bluetooth-Verbindung besteht.</p>
+                        <p>V.4.2.</p>   <p style="margin-left: 30px;">Bei Benutzung des PAYUCA-NFC-Chips geschieht dies durch deren Anhalten an die jeweilige Sperrvorrichtung, wobei dies ab einer Entfernung von ca. 2 cm zur Betätigung der Sperrvorrichtung führt.</p>
+                        <p>V.5.</p>   <p style="margin-left: 30px;">Der Download der PAYUCA-App, deren Benutzung sowie die Benutzung der PAYUCAHomepage sind für den Kunden kostenfrei, sofern in diesen allgemeinen Geschäftsbedingungen nichts Gegenteiliges festgelegt ist.</p>
+                        <p>V.6.</p>   <p style="margin-left: 30px;">Sofern in der PAYUCA-App oder auf der PAYUCA-Homepage Werbeanzeigen Dritter geschaltet werden, übernimmt PAYUCA keine Haftung für deren Inhalte.</p>
+
+
+
+
 
                         <p>
                             Duis rutrum felis at lorem scelerisque, vel iaculis risus viverra. Integer sed gravida libero. Maecenas sit amet lacus et erat rhoncus sodales quis non nunc. Morbi in
@@ -98,9 +143,6 @@
                             libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce ullamcorper nisl risus, a scelerisque dui hendrerit nec.
                         </p>
                         <br>
-                        <blockquote class="pull-right" style="max-width: 250px">
-                            <p>Fusce ac tellus eu nisl lobortis maximus</p>
-                        </blockquote>
                         <p>
                             Praesent eget euismod nibh. Fusce ac tellus eu nisl lobortis maximus ac eget sapien. Nulla malesuada mauris non nulla imperdiet ullamcorper.
                         </p>
@@ -115,10 +157,7 @@
 
                     </div>
                     <div class="panel-footer">
-                <span class="pull-right">
-                    <i class="fa fa-comments-o"> </i> 22 comments
-                </span>
-                        <i class="fa fa-eye"> </i> 142 views
+                        <i class="fa fa-info-circle"> </i> Stand 22.12.2017, Version 1.02
                     </div>
                 </div>
             </div>
