--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>Anmeldung | PAYUCA GmbH</title>
+    <title>Registrierung | PAYUCA GmbH</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
@@ -53,42 +53,100 @@
     </div>
 </nav>
 
-<section id="login" class="bg-light agb">
+<section id="register" class="bg-light agb">
     <div class="container">
-      <div class="login-container">
-          <div class="row">
-              <div class="col-md-12">
-                  <div class="text-center m-b-md">
-                      <h3>PAYUCA LOG IN</h3>
-                      <small>Smart Parking</small>
-                  </div>
-                  <div class="hpanel m-b-xl">
-                      <div class="panel-body">
-                              <form action="#" id="loginForm">
-                                  <div class="form-group">
-                                      <label class="control-label" for="username">E-Mail-Adresse</label>
-                                      <input type="text" placeholder="max@mustermail.com" required="" value="" name="username" id="username" class="form-control">
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label" for="password">Passwort</label>
-                                      <input type="password" placeholder="******" required="" value="" name="password" id="password" class="form-control">
-                                  </div>
-                                  <div class="checkbox">
-                                      <input type="checkbox" class="i-checks" checked>
-                                           Angemeldet bleiben
 
-                                  </div>
-                                  <button class="btn btn-success btn-block m-t-lg">Anmelden</button>
-                                  <a class="btn btn-default btn-block m-b-md" href="register.html">Registrieren</a>
-                                  <center>
-                                    <a href="recovery.html" title="Password recovery">Passwort vergessen?</a>
-                                  </center>
-                              </form>
-                      </div>
-                  </div>
-              </div>
+        <div class="row">
+          <div class="text-center m-b-xl m-t-lg">
+              <h3>PAYUCA Registrierung</h3>
+              <small>Smart Parking</small>
           </div>
-        </div>
+           <div class="col-lg-12">
+              <div class="hpanel m-b-xl">
+                 <div class="panel-body">
+                    <form name="simpleForm" novalidate="" id="simpleForm" action="#" method="post">
+                       <div class="text-center m-b-md" id="wizardControl">
+                          <a class="btn btn-primary" href="#step1" data-toggle="tab">Schritt 1 - Kontodaten</a>
+                          <a class="btn btn-default" href="#step2" data-toggle="tab">Schritt 2 - Persönliche Daten</a>
+                       </div>
+                       <div class="tab-content">
+                          <div id="step1" class="p-m tab-pane active">
+                             <div class="row">
+                                <div class="col-lg-12">
+                                   <div class="row">
+                                      <div class="form-group col-lg-6">
+                                         <label>Vorname</label>
+                                         <input type="text" value="" id="" required="" class="form-control" name="vorname" placeholder="Max">
+                                      </div>
+                                      <div class="form-group col-lg-6">
+                                         <label>Nachname</label>
+                                         <input type="text" value="" id="" required="" class="form-control" name="nachname" placeholder="Musterman">
+                                      </div>
+                                      <div class="form-group col-lg-6">
+                                         <label>E-Mail-Adresse</label>
+                                         <input type="email" value="" id="" required="" class="form-control" name="email" placeholder="max@mail.at">
+                                      </div>
+                                      <div class="form-group col-lg-6">
+                                         <label>Telefon</label>
+                                         <input type="tel" value="" id="" required="" class="form-control" name="telefon" placeholder="+43 676 6702240">
+                                      </div>
+                                      <div class="form-group col-lg-6">
+                                         <label>Passwort</label>
+                                         <input type="password" value="" id="" required="" class="form-control" name="passwort" placeholder="******">
+                                      </div>
+                                      <div class="form-group col-lg-6">
+                                         <label>Passwort wiederholen</label>
+                                         <input type="password" value="" id="" required="" class="form-control" name="passwort" placeholder="******">
+                                      </div>
+                                   </div>
+                                </div>
+                             </div>
+                             <div class="text-right m-t-xs">
+                                <a class="btn btn-default next" href="#step2" data-toggle="tab">Next</a>
+                             </div>
+                          </div>
+                          <div id="step2" class="p-m tab-pane">
+                             <div class="row">
+                                 <div class="col-lg-12">
+                                    <div class="row">
+                                       <div class="form-group col-lg-6">
+                                          <label>Straße</label>
+                                          <input type="text" value="" id="" required="" class="form-control" name="strasse" placeholder="Guglgasse">
+                                       </div>
+                                       <div class="form-group col-lg-6">
+                                          <label>Haus / Stiege / Tür</label>
+                                          <input type="text" value="" id="" required="" class="form-control" name="hausstiegetuer" placeholder="8/3/3">
+                                       </div>
+                                       <div class="form-group col-lg-6">
+                                          <label>Postleitzahl</label>
+                                          <input type="number" value="" id="" required="" class="form-control" name="postleitzahl" placeholder="1110">
+                                       </div>
+                                       <div class="form-group col-lg-6">
+                                          <label>Stadt</label>
+                                          <input type="text" value="" id="" required="" class="form-control" name="stadt" placeholder="Wien">
+                                       </div>
+                                       <div class="form-group col-lg-6">
+                                          <label>Kennzeichen</label>
+                                          <input type="text" value="" id="" required="" class="form-control" name="kennzeichen" placeholder="W7777H">
+                                       </div>
+                                       <div class="form-group col-lg-6">
+
+                                       </div>
+                                    </div>
+                                 </div>
+                             </div>
+                             <div class="text-right m-t-xs">
+                                <a class="btn btn-default prev" href="#step1" data-toggle="tab">Previous</a>
+                                <a class="btn btn-success submitWizard" href="#">Finish</a>
+                             </div>
+                          </div>
+                       </div>
+                    </form>
+                 </div>
+              </div>
+           </div>
+          </div>
+
     </div>
 </section>
 
@@ -208,6 +266,64 @@
 
 <!-- App scripts -->
 <script src="scripts/homer.js"></script>
+
+<script>
+
+    $(function(){
+
+        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+            $('a[data-toggle="tab"]').removeClass('btn-primary');
+            $('a[data-toggle="tab"]').addClass('btn-default');
+            $(this).removeClass('btn-default');
+            $(this).addClass('btn-primary');
+        })
+
+        $('.next').click(function(){
+            var nextId = $(this).parents('.tab-pane').next().attr("id");
+            $('[href=#'+nextId+']').tab('show');
+        })
+
+        $('.prev').click(function(){
+            var prevId = $(this).parents('.tab-pane').prev().attr("id");
+            $('[href=#'+prevId+']').tab('show');
+        })
+
+        $('.submitWizard').click(function(){
+
+            var approve = $(".approveCheck").is(':checked');
+            if(approve) {
+                // Got to step 1
+                $('[href=#step1]').tab('show');
+
+                // Serialize data to post method
+                var datastring = $("#simpleForm").serialize();
+
+                // Show notification
+                swal({
+                    title: "Thank you!",
+                    text: "You approved our example form!",
+                    type: "success"
+                });
+//            Example code for post form
+//            $.ajax({
+//                type: "POST",
+//                url: "your_link.php",
+//                data: datastring,
+//                success: function(data) {
+//                    // Notification
+//                }
+//            });
+            } else {
+                // Show notification
+                swal({
+                    title: "Error!",
+                    text: "You have to approve form checkbox.",
+                    type: "error"
+                });
+            }
+        })
+    });
+</script>
 
 <script>
       // Toastr options
